[project]
name = "mcp-drawing-guides"
version = "0.1.0"
description = "Drawing Guides MCP Server - Provides access to drawing tutorials from easydrawingguides.com"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
mcp-drawing-guides = "main:cli"
